[package]
name = "drone"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "drone"
path = "src/drone/main.rs"

[[bin]]
name = "motor"
path = "src/motor/main.rs"

[dependencies]
anyhow = "1.0"
rclrs = { path = '/workspaces/drones_hive/src/ros2_rust/rclrs' }
rosidl_runtime_rs = "0.3"
std_srvs = { path = '/workspaces/drones_hive/install/std_srvs/share/std_srvs/rust' }
drone_interfaces = { path = '/workspaces/drones_hive/install/drone_interfaces/share/drone_interfaces/rust' }
