[package]
name = "example_node"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "minimal_pub"
path = "src/main.rs"

[dependencies]
rclrs = { path = '/workspaces/drones_hive/src/ros2_rust/rclrs' }
rosidl_runtime_rs = "0.3"
std_msgs = { path = '/workspaces/drones_hive/install/std_msgs/share/std_msgs/rust' }
anyhow = "1.0"